--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -36,7 +36,7 @@
             [message]
                 speaker=narrator
                 # po: generic message which could apply to any scenario where the storyline already explains why even the surviving units don't reappear later in the campaign
-                message= _ "The non-fatal wound modification is disabled for this scenario."
+                message= _ "<b><i>Non-Fatal Wounds</i></b> modification is disabled for this scenario."
 				image="units/human-loyalists/duelist-die5.png"
             [/message]
             [fire_event]
@@ -49,7 +49,7 @@
             value=07b_Pebbles_in_the_Flood
             [message]
                 speaker=narrator
-                message= _ "The non-fatal wound modification is disabled for this scenario."
+                message= _ "<b><i>Non-Fatal Wounds</i></b> modification is disabled for this scenario."
 				image="units/human-loyalists/duelist-die5.png"
             [/message]
             [fire_event]
@@ -71,7 +71,7 @@
             value=02_This_Valley_Belongs_to_Me
             [message]
                 speaker=narrator
-                message= _ "The non-fatal wound modification might work unusually with this campaign. The recall lists change during the campaign, and units that are non-fatally wounded may reappear on the wrong recall list."
+                message= _ "<b><i>Non-Fatal Wounds</i></b> modification might work unusually with this campaign. The recall lists change during the campaign, and units that are non-fatally wounded may reappear on the wrong recall list."
 				image="units/human-loyalists/duelist-die5.png"
                 # I'm not worrying about campaigns like SotA, which have divergent paths but each path has similar recruit lists and the paths recombine later
             [/message]
@@ -83,7 +83,7 @@
             [message]
                 speaker=narrator
                 # po: For this scenario, the objective is to avoid deaths for as long as possible, the scenario ends when any unit perishes.
-                message= _ "The non-fatal wound modification does not affect the objectives for this scenario. The unit can survives, but still triggers the same events as if it died."
+                message= _ "<b><i>Non-Fatal Wounds</i></b> modification does not affect the objectives for this scenario. The unit can survives, but still triggers the same events as if it died."
 				image="units/human-loyalists/duelist-die5.png"				
             [/message]
         [/case]
@@ -91,7 +91,7 @@
             value=06_Temple_in_the_Deep
 			[message]
 				speaker=narrator
-				message=_ "Non-Fatal Wounds: As long as the lich Lord Lenvan is alive, all your dead units will rise as undead regardless of cause of death. Choose if you want to lose them all forever or you prefer to let chance decide. You can still irretrievably lose your units forever if you are attacked by a unit with plague."
+				message=_ "<b><i>Non-Fatal Wounds:</i></b> As long as the Lich-Lord Lenvan is alive, all your dead units will rise as undead regardless of cause of death. Choose if you want to lose them all forever or you prefer to let chance decide. You can still irretrievably lose your units forever if you are attacked by a unit with plague."
 				image="units/human-loyalists/duelist-die5.png"				
 				[option]
 					label=_ "Disable Non-Fatal Wounds until Lord Lenvan dies"
@@ -116,7 +116,7 @@
             value=22_The_Rise_of_Wesnoth
 			[message]
 				speaker=narrator
-				message=_ "As long as the Lich-Lord Jevyan is alive, all your dead units will rise as undead regardless of cause of death."
+				message=_ "<b><i>Non-Fatal Wounds:</i></b> As long as the Lich-Lord Jevyan is alive, all your dead units will rise as undead regardless of cause of death."
 				image="units/human-loyalists/duelist-die5.png"				
 			[/message]
 			[fire_event]
@@ -152,7 +152,7 @@
 		[/set_variable]		
 		[message]
 			speaker=narrator
-			message=_ "Non-Fatal Wounds works normally again."
+			message=_ "<b><i>Non-Fatal Wounds</i></b> works normally again."
 			image="units/human-loyalists/duelist-die5.png"
 		[/message]
 		[event]
@@ -213,7 +213,7 @@
 
                 [message]
                     speaker=narrator
-                    message=_ "Non-Fatal Wounds: in all of mainline Wesnoth, this scenario is probably the most evil act by the player’s own side. The scenario is called Costly Revenge, and for the story it’s meant to be costly to the elves as well as these innocent saurians."
+                    message=_ "<b><i>Non-Fatal Wounds:</i></b> in all of mainline Wesnoth, this scenario is probably the most evil act by the player’s own side. The scenario is called Costly Revenge, and for the story it’s meant to be costly to the elves as well as these innocent saurians."
 					image="units/human-loyalists/duelist-die5.png"
                     [option]
                         label=_ "Disable Non-Fatal Wounds and let the story proceed as expected"
@@ -359,3 +359,30 @@
     [/switch]
 [/event]
 #endif
+
+# Disable the mod on scenarios with {IS_LAST_SCENARIO}, both because there's no further recalls and because the ending may change slightly depending on which units die in the final battle.
+# This can't check for next_scenario=null, as many campaigns have an epilogue scenario.
+# Reading wesnoth.sides[x].objectives might be possible, but that's only available as the translated string.
+[event]
+    name=start
+    [filter_condition]
+        [lua]
+            code=<<
+                local result = wesnoth.sync.evaluate_single (function()
+                    local _ = wesnoth.textdomain "wesnoth"
+                    return { value = string.find(tostring(wesnoth.sides[1].objectives), tostring(_ "This is the last scenario."), 1, "plain")}
+                    end)
+                return result.value
+            >>
+        [/lua]
+    [/filter_condition]
+#textdomain wesnoth-Non_Fatal_Wounds
+    [message]
+        speaker=narrator
+        message= _"<b><i>Non-Fatal Wounds: </i></b>"+_"Because this is the last scenario, all units can die, without exception, and will count as such for the ending scene."
+		image="units/human-loyalists/duelist-die5.png"		
+    [/message]
+    [fire_event]
+        name=nfw_disable_for_this_scenario
+    [/fire_event]
+[/event]
