--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -207,7 +207,7 @@
 		[then]
 			[message]
 				speaker=narrator
-				message= _ "With this modification enabled, units are merely wounded instead of killed. If you choose the possibility of dead or undead, some units still can definitely die. If you win this scenario the wounded units will be added to your recall list.
+				message= _"<b><i>Non-Fatal Wounds: </i></b>"+_"With this modification enabled, units are merely wounded instead of killed. If you choose the possibility of dead or undead, some units still can definitely die. If you win this scenario the wounded units will be added to your recall list.
 
 This does not apply to any unit that the objectives require you to keep alive. Even if they say they’re only wounded, the enemy will give your heroes no chance."
 				image="units/human-loyalists/duelist-die5.png"
