Filter village terrain to plagued wound

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -6,8 +6,8 @@
 	first_time_only=no
 	[filter_condition]
 		[have_location]
+			{EVENT_UNIT}
 			[filter]
-				{EVENT_UNIT}
 				id=Wesfolk Leader,Lady Outlaw
 			[/filter]
 		[/have_location]
@@ -52,9 +52,14 @@
 		[/and]
 	[/filter_condition]
 	[filter]
+		{EVENT_UNIT}
 		[not]
-			{EVENT_UNIT}
 			status=unplagueable
+		[/not]
+		[not]
+			[filter_location]
+				terrain=*^V*
+			[/filter_location]
 		[/not]
 	[/filter]
 	[filter_second_attack]
