added support for future bird race

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -414,7 +414,7 @@
 				[have_location]
 					{EVENT_UNIT}
 					[filter]
-						race=horse,monster,wolf,bats,falcon,gryphon
+						race=horse,monster,wolf,bats,falcon,gryphon,bird
 					[/filter]
 				[/have_location]
 				[or]
@@ -442,7 +442,7 @@
 				[have_location]
 					{EVENT_UNIT}
 					[filter]
-						race=bats,falcon,gryphon,drake
+						race=bats,falcon,gryphon,drake,bird
 					[/filter]
 				[/have_location]
 				[and]
@@ -475,7 +475,7 @@
 				[have_location]
 					{EVENT_UNIT}
 					[filter]
-						race=bats,falcon,gryphon,naga,merman
+						race=bats,falcon,gryphon,naga,merman,bird
 					[/filter]
 				[/have_location]
 				[or]
