Undead/Ghost debuff

--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -1084,14 +1084,11 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 				apply_to=image_mod
 				replace=~O(60%)~GS( )~B(100)
 			[/effect]
-			
-			
 			[effect]
 				apply_to=alignment
 				set=chaotic
 			[/effect]
-			
-			
+
 			#movement costs
 			[effect]
 				apply_to=movement_costs
@@ -1153,6 +1150,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 				set_type=arcane
 				set_description=_"spectral $unit.attack[0].description"
 				set_icon=$unit.attack[0].icon
+				increase_damage=-25%
 				[set_specials]
 					mode=append
 					[drains]
@@ -1177,6 +1175,12 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 				set_type=cold
 				set_description=_"spectral $unit.attack[$($unit.attack.length - 1)].description"
 				set_icon=$unit.attack[$($unit.attack.length - 1)].icon
+			[/effect]
+
+			#general damage debuff
+			[effect]
+				apply_to=attack
+				increase_damage=-20%
 			[/effect]
 		[/trait]
 	[/modify_unit]
@@ -1237,12 +1241,11 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 					arcane=140 
 				[/resistance]
 			[/effect]
-			
+			#alignment
 			[effect]
 				apply_to=alignment
 				set=chaotic
 			[/effect]
-			
 			#melee attacks
 			[effect]
 				apply_to=attack
@@ -1261,7 +1264,6 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 			#magical debuff
 			[effect]
 				apply_to=attack
-				range=ranged
 				special_id=magical
 				increase_attacks=-50%
 			[/effect]
@@ -1276,8 +1278,8 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 					[chance_to_hit]
 						id=marksman
 						name= _ "poor marksmanship"
-						description= _ "When used offensively, this attack always has at least a 50% chance to hit."
-						value=50
+						description= _ "When used offensively, this attack always has at least a 40% chance to hit."
+						value=40
 						cumulative=yes
 						active_on=offense
 					[/chance_to_hit]
@@ -1286,7 +1288,6 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 			#ranged damage
 			[effect]
 				apply_to=attack
-				range=ranged
 				increase_damage=-25%
 			[/effect]
 		[/trait]
