--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -177,8 +177,8 @@
 
 "+_"<b>Wounds list:</b>
 * <i>Death</i> (definitive death)
-* <i>Turning into a ghost</i>: -40% HP, spirit type movement, defenses and resistances, chaotic alignment, ranged attack changed to cold if not magical, arcane or fire, melee attack changed to arcane and with drain if not magical, cold or fire > Units that are not already spirits or ghosts
-* <i>Turning into a zombie</i>: -20% HP, slower, low arcane resistance,  chaotic alignment, plague on melee, -50% magical attacks damage, -25& ranged attacks damage, and poor markmanship on marksmans > Units that are not already undead"
+* <i>Turning into a ghost</i>: -50% HP; -20% general attack damage; spirit type movement, defenses and resistances; chaotic alignment; ranged attack changed to cold if not magical, arcane or fire; melee attack changed to arcane, with drain, and with -25% damage if not magical, cold or fire > Units that are not already spirits or ghosts
+* <i>Turning into a zombie</i>: -30% HP, -25% general attack damage, -25% movement, -50% magical attacks strikes, low arcane resistance, chaotic alignment, plague on melee, and poor markmanship on marksmans > Units that are not already undead"
         side_for=$side_number
 		image="units/human-loyalists/duelist-die5.png"
         [option]
