Fear of Weapon buff

--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -363,15 +363,24 @@ Redeem yourself by defeating an opponent with at least 1 level higher than you o
 					mode=append
 					[attacks]
 						name="<span color='#DA0000'>"+_"weakness"+"</span>"
-						description=_"-1 strikes when facing an enemy with $second_weapon.description|.
+						description=_"-1 strikes and -20% accuracy when facing an enemy with $second_weapon.description|.
 Face your fears and defeat them to try to overcome them."
 						id=nfwme_scared_of_weapon
 						[filter_opponent]
-							[filter_weapon]
+							[has_attack]
 								name=$nfwme_rand_scary_weapon
-							[/filter_weapon]
+							[/has_attack]
 						[/filter_opponent]
 						sub=1
+					[/attacks]
+					[chance_to_hit]
+						id=nfwme_scared_of_weapon_chance
+						[filter_opponent]
+							[has_attack]
+								name=$nfwme_rand_scary_weapon
+							[/has_attack]
+						[/filter_opponent]
+						sub=20
 					[/attacks]
 				[/set_specials]
 			[/effect]
