--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -32,7 +32,7 @@
 * <i>Concussion</i> (-20% magical damage) > Units with magical attacks, random
 * <i>Wild magic</i> (magical attacks now are 50% chance) > Units with magical attacks, random
 * <i>Cowardice</i> (-15% accuracy) > Not mechanical, random
-* <i>Fear of weapon</i> (reduced 1 strikes against what wounded them) > Not mechanical, wounded with any weapon
+* <i>Fear of weapon</i> (reduced 1 strikes and -20% accuracy against what wounded them) > Not mechanical, wounded with any weapon
 * <i>Fear of the dark/light</i> (reduced 1 strikes during the time they were wounded) > Not mechanical, wounded on day, night, or underground
 * <i>Fear of terrain</i> (increased 1-2 move cost for the terrain they were wounded on) > Not mechanical, wounded on some terrains
 * <i>Fear of fog</i> (-40% mp when fog is active) > Not mechanical, wounded with fog active
@@ -178,7 +178,7 @@
 "+_"<b>Wounds list:</b>
 * <i>Death</i> (definitive death)
 * <i>Turning into a ghost</i>: -50% HP; -20% general attack damage; spirit type movement, defenses and resistances; chaotic alignment; ranged attack changed to cold if not magical, arcane or fire; melee attack changed to arcane, with drain, and with -25% damage if not magical, cold or fire > Units that are not already spirits or ghosts
-* <i>Turning into a zombie</i>: -30% HP, -25% general attack damage, -25% movement, -50% magical attacks strikes, low arcane resistance, chaotic alignment, plague on melee, and poor markmanship on marksmans > Units that are not already undead"
+* <i>Turning into a zombie</i>: -30% HP, -25% general attack damage, -25% movement, -50% magical attacks strikes, low arcane resistance, chaotic alignment and fearless, plague on melee, and poor markmanship on marksmans > Units that are not already undead"
         side_for=$side_number
 		image="units/human-loyalists/duelist-die5.png"
         [option]
