--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -381,7 +381,7 @@ Face your fears and defeat them to try to overcome them."
 							[/has_attack]
 						[/filter_opponent]
 						sub=20
-					[/attacks]
+					[/chance_to_hit]
 				[/set_specials]
 			[/effect]
 		[/object]
