--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -1147,6 +1147,12 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
                     special_id=magical
                 [/not]
                 [not]
+                    special_type=drains
+                [/not]
+                [not]
+                    special_type=heal_on_hit
+                [/not]
+                [not]
                     type=cold,fire
                 [/not]
                 set_type=arcane
@@ -1287,7 +1293,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
                     [/chance_to_hit]
                 [/set_specials]
             [/effect]
-            #ranged damage
+            #general damage debuff
             [effect]
                 apply_to=attack
                 increase_damage=-25%
