Fixed duplicate undead trait on undead ghosts

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -921,14 +921,41 @@
                         [have_location]
                             {EVENT_UNIT}
                             [filter]
-                                trait=ghost_trait
+                                trait=ghost_trait,undead
                             [/filter]
                         [/have_location]
                     [/not]
                 [/and]
                 [then]
-                    {NFWME_undead_ghost_WOUND}
+                    {NFWME_undead_ghost_WOUND {TRAIT_UNDEAD}}
                 [/then]
+                [elseif]
+				   {NFWME_undead_ENABLED}
+					[and]
+						{VARIABLE_CONDITIONAL nfwe_wound_type.movement_type not_equals undeadspirit}
+					[/and]
+					[and]
+						[not]
+							[have_location]
+								{EVENT_UNIT}
+								[filter]
+									trait=ghost_trait
+								[/filter]
+							[/have_location]
+						[/not]
+					[/and]
+					[and]
+						[have_location]
+							{EVENT_UNIT}
+							[filter]
+								trait=undead
+							[/filter]
+						[/have_location]
+					[/and]
+                    [then]
+						{NFWME_undead_ghost_WOUND {NFW_TRAIT_UNDEAD}}
+                    [/then]
+                [/elseif]
                 [elseif]
                     {NFWME_dead_ENABLED}
                     [then]
