--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -1076,7 +1076,13 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
     {NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Stepped on Lego" {NFWME_COLOR_RED}}
 #enddef
 
-#define NFWME_undead_ghost_WOUND
+#define NFW_TRAIT_UNDEAD
+    [trait]
+        id=nfw_undead
+    [/trait]
+#enddef
+
+#define NFWME_undead_ghost_WOUND TRAIT_UNDEAD
     [modify_unit]
         {FILTER_EVENT_UNIT}
         {TRAIT_UNDEAD}
