--- a/utils/Macros.cfg
+++ b/utils/Macros.cfg
@@ -12,15 +12,15 @@
     [/filter]
 #enddef
 
-#define NFWME_COLOR_RED
+#define NFW_COLOR_RED
     color="255,0,0"
 #enddef
 
-#define NFWME_COLOR_GREEN
+#define NFW_COLOR_GREEN
     color="0,255,0"
 #enddef
 
-#define NFWME_FLOAT_TEXT  X Y MSG COLOR
+#define NFW_FLOAT_TEXT  X Y MSG COLOR
     [floating_text]
         x,y={X},{Y}
         {COLOR}
@@ -28,12 +28,12 @@
     [/floating_text]
 #enddef
 
-#define NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT MSG COLOR
-    {NFWME_FLOAT_TEXT $x1 $y1 {MSG} {COLOR}}
+#define NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT MSG COLOR
+    {NFW_FLOAT_TEXT $x1 $y1 {MSG} {COLOR}}
 #enddef
 
-#define NFWME_FLOAT_TEXT_SECOND_UNIT MSG COLOR
-    {NFWME_FLOAT_TEXT $x2 $y2 {MSG} {COLOR}}
+#define NFW_FLOAT_TEXT_SECOND_UNIT MSG COLOR
+    {NFW_FLOAT_TEXT $x2 $y2 {MSG} {COLOR}}
 #enddef
 
 #define NFW_FILTER_HEROES
