--- a/utils/Options.cfg
+++ b/utils/Options.cfg
@@ -39,6 +39,13 @@
     [/choice]
 
     [checkbox]
+        id=nfw_05
+        name=_"Elementals"
+        description=_"Add transformations to elemental as a possibility to the table."
+        default=no
+    [/checkbox]
+
+    [checkbox]
         id=nfw_03
         name=_"Funny wounds"
         description=_"Add Stepped on LEGO and Paper cut as a possibility to the table."
@@ -72,35 +79,47 @@
         to_variable=nfw_03
     [/set_variable]
     [set_variable]
+        name=nfwe_elemental
+        to_variable=nfw_05
+    [/set_variable]
+    [set_variable]
         name=nfw_options_first
         value=yes
     [/set_variable]
 [/event]
 
-#define NFWME_wounds_ENABLED
+#define NFW_wounds_ENABLED
     {VARIABLE_CONDITIONAL nfwe_wounds equals 0}
 #enddef
 
-#define NFWME_wounds_DISABLED
+#define NFW_wounds_DISABLED
     {VARIABLE_CONDITIONAL nfwe_wounds equals 1}
 #enddef
 
-#define NFWME_wounds_DISABLED_with_plague
+#define NFW_wounds_DISABLED_with_plague
     {VARIABLE_CONDITIONAL nfwe_wounds equals 2}
 #enddef
 
-#define NFWME_dead_ENABLED
+#define NFW_dead_ENABLED
     {VARIABLE_CONDITIONAL nfwe_deadundead equals 1}
 #enddef
 
-#define NFWME_undead_ENABLED
+#define NFW_undead_ENABLED
     {VARIABLE_CONDITIONAL nfwe_deadundead equals 2}
 #enddef
 
-#define NFWME_funny_ENABLED
+#define NFW_funny_ENABLED
     {VARIABLE_CONDITIONAL nfwe_funny equals yes}
 #enddef
 
 #define NFW_ENABLED_HELP
     {VARIABLE_CONDITIONAL nfw_04 equals yes}
+#enddef
+
+#define NFW_elemental_ENABLED
+    {VARIABLE_CONDITIONAL nfwe_elemental equals yes}
+#enddef
+
+#define NFW_elemental_DISABLED
+    {VARIABLE_CONDITIONAL nfwe_elemental equals no}
 #enddef
