--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -74,20 +74,8 @@
 
     [remove_object]
         {EVENT_UNIT}
-        ability=maimed_display_healing
-        object_id=maimed_logic_object
-    [/remove_object]
-
-    [remove_object]
-        {EVENT_UNIT}
         ability=damaged_display_healing
         object_id=damaged
-    [/remove_object]
-
-    [remove_object]
-        {EVENT_UNIT}
-        ability=damaged_display_healing
-        object_id=damaged_logic_object
     [/remove_object]
 
     [remove_object]
@@ -193,6 +181,11 @@
                     id=wild_magic_display_healing
                 [/display]
             [/abilities]
+            [abilities]
+                [display]
+                    id=damaged_display_healing
+                [/display]
+            [/abilities]
         [/effect]
     [/modify_unit]
 [/event]
@@ -219,7 +212,7 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_water
             [/remove_object]
-            {NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Aquaphobia" {NFWME_COLOR_GREEN}}
+            {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from Aquaphobia" {NFW_COLOR_GREEN}}
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -247,7 +240,7 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_hight
             [/remove_object]
-            {NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Acrophobia" {NFWME_COLOR_GREEN}}
+            {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from Acrophobia" {NFW_COLOR_GREEN}}
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -275,7 +268,7 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_desert
             [/remove_object]
-            {NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Erimophobia" {NFWME_COLOR_GREEN}}
+            {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from Erimophobia" {NFW_COLOR_GREEN}}
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -303,7 +296,7 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_cave
             [/remove_object]
-            {NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Claustrophobia" {NFWME_COLOR_GREEN}}
+            {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from Claustrophobia" {NFW_COLOR_GREEN}}
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -331,7 +324,7 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_plant
             [/remove_object]
-            {NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Dendrophobia" {NFWME_COLOR_GREEN}}
+            {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from Dendrophobia" {NFW_COLOR_GREEN}}
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -359,7 +352,7 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_open
             [/remove_object]
-            {NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Agoraphobia" {NFWME_COLOR_GREEN}}
+            {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from Agoraphobia" {NFW_COLOR_GREEN}}
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -396,7 +389,7 @@
                         {EVENT_SECOND_UNIT}
                         object_id=coward
                     [/remove_object]
-                    {NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from Cowardice" {NFWME_COLOR_GREEN}}
+                    {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from Cowardice" {NFW_COLOR_GREEN}}
                 [/then]
             [/if]
         [/case]
@@ -430,7 +423,7 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_weapon
             [/remove_object]
-            {NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of $second_unit.variables.scary_weapon_translated" {NFWME_COLOR_GREEN}}
+            {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of $second_unit.variables.scary_weapon_translated" {NFW_COLOR_GREEN}}
             {CLEAR_VARIABLE $second_unit.variables.scary_weapon}
             {CLEAR_VARIABLE $second_unit.variables.scary_weapon_translated}
         [/case]
@@ -461,7 +454,7 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_light
             [/remove_object]
-            {NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of light" {NFWME_COLOR_GREEN}}
+            {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of light" {NFW_COLOR_GREEN}}
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -490,7 +483,7 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_dark
             [/remove_object]
-            {NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of dark" {NFWME_COLOR_GREEN}}
+            {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of dark" {NFW_COLOR_GREEN}}
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -518,7 +511,7 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_fog
             [/remove_object]
-            {NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of fog" {NFWME_COLOR_GREEN}}
+            {NFW_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of fog" {NFW_COLOR_GREEN}}
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
