--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -1,105 +1,11 @@
 
 [event]
     name=start
-    id=nfwme_activate_wounds
+    id=nfwme_kill_dead_units
     first_time_only=no
     [kill]
         trait=nfwme_dead,nfwme_plagued
     [/kill]
-
-    #these prevent units from loseing more max health every senario
-    #maim health debuff
-    [modify_unit]
-        [filter]
-            ability=maimed_display
-            [not]
-                ability=maimed_logic
-            [/not]
-        [/filter]
-
-        [object]
-            id=maimed_logic_object
-            take_only_once=no
-            [effect]
-                apply_to=new_ability
-                [abilities]
-                    [display]
-                        id=maimed_logic
-                    [/display]
-                [/abilities]
-            [/effect]
-
-            [effect]
-                apply_to=hitpoints
-                increase_total=-20%
-            [/effect]
-        [/object]
-    [/modify_unit]
-    #damage health debuff
-    [modify_unit]
-        [filter]
-            ability=damaged_display
-            [not]
-                ability=damaged_logic
-            [/not]
-        [/filter]
-
-        [object]
-            id=damaged_logic_object
-            take_only_once=no
-            [effect]
-                apply_to=new_ability
-                [abilities]
-                    [display]
-                        id=damaged_logic
-                    [/display]
-                [/abilities]
-            [/effect]
-
-            [effect]
-                apply_to=hitpoints
-                increase_total=-5%
-            [/effect]
-        [/object]
-    [/modify_unit]
-    #ghost health debuff
-    [modify_unit]
-        [filter]
-            trait=ghost_trait
-            [not]
-                trait=nwfme_ghost_health
-            [/not]
-        [/filter]
-
-        [trait]
-            id=nwfme_ghost_health
-            duration=forever
-            take_only_once=no
-
-            [effect]
-                apply_to=hitpoints
-                increase_total=-50%
-            [/effect]
-        [/trait]
-    [/modify_unit]
-    #zombie health debuff
-    [modify_unit]
-        [filter]
-            trait=nfwme_corpse
-            [not]
-                trait=nwfme_corpse_health
-            [/not]
-        [/filter]
-
-        [trait]
-            id=nwfme_corpse_health
-
-            [effect]
-                apply_to=hitpoints
-                increase_total=-30%
-            [/effect]
-        [/trait]
-    [/modify_unit]
 [/event]
 
 #memory loss TESTED
@@ -177,6 +83,7 @@
     [/remove_object]
 [/event]
 
+#removes advancements to level 2 ghosts
 [event]
     name=post_advance
     id=nfwme_no_advancments
@@ -211,4 +118,301 @@
         variable=nfwme_wounded_unit
         {EVENT_UNIT}
     [/unstore_unit]
+[/event]
+
+#Heals poisoned poison elementals
+[event]
+    name=attack_end
+    id=nfwe_heals_poison_elemental
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL second_unit.hitpoints greater_than 0}
+    [/filter_condition]
+	[filter_attack]
+		special_type=poison
+	[/filter_attack]
+    [filter_second]
+        trait=nfw_elemental_poison
+    [/filter_second]
+
+	[modify_unit]
+		[filter]
+			{EVENT_SECOND_UNIT}
+		[/filter]
+		[effect]
+			apply_to=hitpoints
+			increase=8
+		[/effect]
+	[/modify_unit]
+    {NFW_FLOAT_TEXT_SECOND_UNIT "8" color="0,255,0"}
+[/event]
+
+#Heals water elementals on water or cold terrains
+[event]
+    name=attack_end
+    id=nfwe_heals_water_elemental
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL unit.hitpoints greater_than 0}
+		[have_location]
+			x=$x1,$x2
+			y=$y1,$y2
+			terrain=A*,W*,S*,Ms*,Ha*,Cea^*,Coa^*,Cha^*,Cva^*,Cfa^*,Kea^*,Koa^*,Kha^*,Kva^*,Kfa^*,Rra^*,*^Esa,*^Fpa,*^Feta,*^Fda,*^Fma,*^Voa,*^Vea,*^Vha,*^Vhca,*^Vhha,*^Vca,*^Vla,*^Vaa
+		[/have_location]
+		[have_unit]
+			{EVENT_UNIT}
+			[or]
+				{EVENT_SECOND_UNIT}
+			[/or]
+			trait=nfw_elemental_water
+		[/have_unit]
+    [/filter_condition]
+
+	[modify_unit]
+		[filter]
+			{EVENT_UNIT}
+			[or]
+				{EVENT_SECOND_UNIT}
+			[/or]
+			trait=nfw_elemental_water
+		[/filter]
+		[effect]
+			apply_to=hitpoints
+			increase=2
+		[/effect]
+	[/modify_unit]
+	[if]
+		[have_unit]
+			{EVENT_UNIT}
+			trait=nfw_elemental_water
+		[/have_unit]
+		[then]
+			{NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT "2" color="0,255,0"}
+		[/then]
+	[/if]
+	[if]
+		[have_unit]
+			{EVENT_SECOND_UNIT}
+			trait=nfw_elemental_water
+		[/have_unit]
+		[then]
+			{NFW_FLOAT_TEXT_SECOND_UNIT "2" color="0,255,0"}
+		[/then]
+	[/if]
+[/event]
+
+#Heals fire elementals on fire or lava terrains
+[event]
+    name=attack_end
+    id=nfwe_heals_fire_elemental
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL unit.hitpoints greater_than 0}
+		[have_location]
+			x=$x1,$x2
+			y=$y1,$y2
+			terrain=*^Ecf,*^Eb,Ql*,Mv*,Yl*
+		[/have_location]
+		[have_unit]
+			{EVENT_UNIT}
+			[or]
+				{EVENT_SECOND_UNIT}
+			[/or]
+			trait=nfw_elemental_fire
+		[/have_unit]
+    [/filter_condition]
+
+	[modify_unit]
+		[filter]
+			{EVENT_UNIT}
+			[or]
+				{EVENT_SECOND_UNIT}
+			[/or]
+			trait=nfw_elemental_fire
+		[/filter]
+		[effect]
+			apply_to=hitpoints
+			increase=4
+		[/effect]
+	[/modify_unit]
+	[if]
+		[have_unit]
+			{EVENT_UNIT}
+			trait=nfw_elemental_fire
+		[/have_unit]
+		[then]
+			{NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT "4" color="0,255,0"}
+		[/then]
+	[/if]
+	[if]
+		[have_unit]
+			{EVENT_SECOND_UNIT}
+			trait=nfw_elemental_fire
+		[/have_unit]
+		[then]
+			{NFW_FLOAT_TEXT_SECOND_UNIT "4" color="0,255,0"}
+		[/then]
+	[/if]
+[/event]
+
+#Heals earth elementals on cave terrains
+[event]
+    name=attack_end
+    id=nfwe_heals_earth_elemental
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL unit.hitpoints greater_than 0}
+		[have_location]
+			x=$x1,$x2
+			y=$y1,$y2
+			terrain=U*
+		[/have_location]
+		[have_unit]
+			{EVENT_UNIT}
+			[or]
+				{EVENT_SECOND_UNIT}
+			[/or]
+			trait=nfw_elemental_earth
+		[/have_unit]
+    [/filter_condition]
+
+	[modify_unit]
+		[filter]
+			{EVENT_UNIT}
+			[or]
+				{EVENT_SECOND_UNIT}
+			[/or]
+			trait=nfw_elemental_earth
+		[/filter]
+		[effect]
+			apply_to=hitpoints
+			increase=2
+		[/effect]
+	[/modify_unit]
+	[if]
+		[have_unit]
+			{EVENT_UNIT}
+			trait=nfw_elemental_earth
+		[/have_unit]
+		[then]
+			{NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT "2" color="0,255,0"}
+		[/then]
+	[/if]
+	[if]
+		[have_unit]
+			{EVENT_SECOND_UNIT}
+			trait=nfw_elemental_earth
+		[/have_unit]
+		[then]
+			{NFW_FLOAT_TEXT_SECOND_UNIT "2" color="0,255,0"}
+		[/then]
+	[/if]
+[/event]
+
+#Heals arcane elementals on Ethereal abyss
+[event]
+    name=attack_end
+    id=nfwe_heals_arcane_elemental
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL unit.hitpoints greater_than 0}
+		[have_location]
+			x=$x1,$x2
+			y=$y1,$y2
+			terrain=Qxua
+		[/have_location]
+		[have_unit]
+			{EVENT_UNIT}
+			[or]
+				{EVENT_SECOND_UNIT}
+			[/or]
+			trait=nfw_elemental_arcane
+		[/have_unit]
+    [/filter_condition]
+
+	[modify_unit]
+		[filter]
+			{EVENT_UNIT}
+			[or]
+				{EVENT_SECOND_UNIT}
+			[/or]
+			trait=nfw_elemental_arcane
+		[/filter]
+		[effect]
+			apply_to=hitpoints
+			increase=8
+		[/effect]
+	[/modify_unit]
+	[if]
+		[have_unit]
+			{EVENT_UNIT}
+			trait=nfw_elemental_arcane
+		[/have_unit]
+		[then]
+			{NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT "8" color="0,255,0"}
+		[/then]
+	[/if]
+	[if]
+		[have_unit]
+			{EVENT_SECOND_UNIT}
+			trait=nfw_elemental_arcane
+		[/have_unit]
+		[then]
+			{NFW_FLOAT_TEXT_SECOND_UNIT "8" color="0,255,0"}
+		[/then]
+	[/if]
+[/event]
+
+#Heals wind elementals on Windmills
+[event]
+    name=attack_end
+    id=nfwe_heals_air_elemental
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL unit.hitpoints greater_than 0}
+		[have_location]
+			x=$x1,$x2
+			y=$y1,$y2
+			terrain=*^Wm,^Vwm
+		[/have_location]
+		[have_unit]
+			{EVENT_UNIT}
+			[or]
+				{EVENT_SECOND_UNIT}
+			[/or]
+			trait=nfw_elemental_air
+		[/have_unit]
+    [/filter_condition]
+
+	[modify_unit]
+		[filter]
+			{EVENT_UNIT}
+			[or]
+				{EVENT_SECOND_UNIT}
+			[/or]
+			trait=nfw_elemental_air
+		[/filter]
+		[effect]
+			apply_to=hitpoints
+			increase=4
+		[/effect]
+	[/modify_unit]
+	[if]
+		[have_unit]
+			{EVENT_UNIT}
+			trait=nfw_elemental_air
+		[/have_unit]
+		[then]
+			{NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT "4" color="0,255,0"}
+		[/then]
+	[/if]
+	[if]
+		[have_unit]
+			{EVENT_SECOND_UNIT}
+			trait=nfw_elemental_air
+		[/have_unit]
+		[then]
+			{NFW_FLOAT_TEXT_SECOND_UNIT "4" color="0,255,0"}
+		[/then]
+	[/if]
 [/event]
