--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -26,7 +26,7 @@
         name=nfwe_rand_wound
         id=nfwe_rand_wound_id
         first_time_only=no
-        {NFWME_dead_WOUND}
+        {NFW_dead_WOUND}
     [/event]
     {CLEAR_VARIABLE nfw_wounded}
 [/event]
@@ -73,7 +73,7 @@
     name=nfw_dialogue_on_death
     first_time_only=no
     [filter_condition]
-        {NFWME_wounds_ENABLED}
+        {NFW_wounds_ENABLED}
     [/filter_condition]
     [filter]
         {EVENT_UNIT}
